--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.90.3",
+    "@tanstack/react-router": "^1.133.3",
+    "@tanstack/react-router-devtools": "^1.133.25",
     "better-react-mathjax": "^2.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tanstack/eslint-plugin-query": "^5.91.0",
+    "@tanstack/router-plugin": "^1.133.4",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
