--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "fastify": "^5.6.1"
   },
   "devDependencies": {
-    "@types/node": "^24.6.1",
-    "prisma": "^6.16.3",
+    "dotenv": "^17.2.3",
+    "prisma": "^7.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
