--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,9 +1,17 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "moduleResolution": "node",
     "target": "ES2023",
+    "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "include": ["src/**/*", "lib/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
